Move partner id into .env file

--- a/sample.env
+++ b/sample.env
@@ -2,3 +2,4 @@ MY_LOCAL_PASS=xxx
 MY_LOCAL_SECRET_KEY=PATH-TO/keys/local_dev_secret.asc
 APISTG_COD_PUBLIC_KEY=PATH-TO/keys/apistg_cod_public.asc
 BASE_URL=https://apistg.ahamove.com/
+PARTNER_ID=your_partner_id
